--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -66,61 +67,7 @@
         </div>
 
         <section id="productos">
-            <article class="productos__article">
-                <a href="#"><img class="img-producto" src="imagenes/jordan1.png" alt="zapatilla Air Jordan 1 mid blanca y naranja"></a>
-                <p class="fw-bold">AIR JORDAN 1</p><p>$200.000</p>
-                <div class="btn-stock" value="0">
-                    <button class="agregarAlCarrito" value="0">Comprar</button>
-                </div>
-                <div class="contenedorMsgAgregado">
-                    <span class="msgAgregado"></span>
-                </div>
-            </article>
-
-            <article class="productos__article">
-                <a href="#"><img class="img-producto" src="imagenes/jordan2.png" alt="zapatilla Nike Air Jordan 2 mid blanca"></a>
-                <p class="fw-bold">AIR JORDAN 2</p><p>$150.000</p>
-                <div class="btn-stock" value="1">
-                    <button class="agregarAlCarrito" value="1">Comprar</button>
-                </div>
-                <span class="msgAgregado"></span>
-            </article>
             
-            <article class="productos__article">
-                <a href="#"><img class="img-producto" src="imagenes/jordan3.png" alt="zapatilla Nike Air Jordan 3 low blanca"></a>
-                <p class="fw-bold">AIR JORDAN 3</p><p>$250.000</p>
-                <div class="btn-stock" value="2">
-                    <button class="agregarAlCarrito" value="2">Comprar</button>
-                </div>
-                <span class="msgAgregado"></span>
-            </article>
-             
-            <article class="productos__article">
-                <a href="#"><img class="img-producto" src="imagenes/jordan4.png" alt="zapatilla Nike Air Jordan 4 low blanca y rosa"></a>
-                <p class="fw-bold">AIR JORDAN 4</p><p>$220.000</p>
-                <div class="btn-stock" value="3">
-                    <button class="agregarAlCarrito" value="3">Comprar</button>
-                </div>
-                <span class="msgAgregado"></span>
-            </article>
-
-            <article class="productos__article">
-                <a href="#"><img class="img-producto" src="imagenes/jordan5.png" alt="zapatilla Nike Air Jordan 5 mid negra"></a>
-                <p class="fw-bold">AIR JORDAN 5</p><p>$180.000</p>
-                <div class="btn-stock" value="4">
-                    <button class="agregarAlCarrito" value="4">Comprar</button>
-                </div>
-                <span class="msgAgregado"></span>
-            </article>
-
-            <article class="productos__article">
-                <a href="#"><img class="img-producto" src="imagenes/jordan6.png" alt="zapatilla Nike Air Jordan 6 mid negra"></a>
-                <p class="fw-bold">AIR JORDAN 6</p><p>$240.000</p>
-                <div class="btn-stock" value="5">
-                    <button class="agregarAlCarrito" value="5">Comprar</button>
-                </div>
-                <span class="msgAgregado"></span>
-            </article>
         </section>
     </main>
     <footer>
@@ -155,9 +102,10 @@
         </div>
     </footer>
     <script src="./js/index.js"></script>
-    <script src="./js/carrito.js"></script>
     <script src="./js/productos.js"></script>
+    <script src="./js/carrito.js"></script>
     <script src="./js/funciones.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
