falta terminar pagos

--- a/carrito.html
+++ b/carrito.html
@@ -57,7 +57,9 @@
         <section id="lista-carrito">
             
         </section>
-        <section id ="pagos"></section>
+        <section id ="pagos" class="d-none">
+
+        </section>
     </main>
     <footer>
         <div class="footer__div">
